# bm-stdin

./: CMakeLists.txt  READMe.md  gen_result.sh
result/: 20200721-145641.csv
src/: stdin_bm.cpp
